<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".AboutUs">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B4C7E7"
        android:fontFamily="@font/aharoni"
        android:padding="5dp"
        android:shadowColor="@color/black"
        android:shadowDx="-2"
        android:shadowDy="2"
        android:shadowRadius="9"
        android:text="About Us"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHighlight="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="2dp"
        android:background="#00000000"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_revert"
        app:tint="#020E59"
        tools:ignore="UseAppTint" />

    <View
        android:id="@+id/Viewblue"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="#F4F4F4"
        android:fontFamily="@font/aharoni"
        android:padding="5dp"
        android:shadowColor="@color/black"
        android:shadowDx="-2"
        android:shadowDy="2"
        android:shadowRadius="9"
        android:text="About Us"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHighlight="@color/black"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4F4F4"
        android:fontFamily="@font/abeezeeregular"
        android:padding="5dp"
        android:textStyle="bold"
        android:shadowRadius="9"
        android:text="Version 0.1.2"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4F4F4"
        android:fontFamily="@font/abeezeeregular"
        android:padding="5dp"
        android:shadowRadius="9"
        android:text="@string/Developers"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintTop_toBottomOf="@+id/textView29"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4F4F4"
        android:fontFamily="@font/abeezeeregular"
        android:padding="5dp"
        android:shadowRadius="9"
        android:text="@string/sponsors"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintTop_toBottomOf="@+id/textView30"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4F4F4"
        android:fontFamily="@font/abadimtstdextralight"
        android:padding="5dp"
        android:text="@string/importanttext"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintTop_toBottomOf="@+id/textView31"
        tools:layout_editor_absoluteX="1dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="339dp"
        android:layout_height="205dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32"
        app:srcCompat="@drawable/bakingapplogo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="355dp"
        android:layout_height="94dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/img_1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Visit the Facebook page of our sponsor:"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/calibri"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageButton
        android:id="@+id/btnfblink"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:background="@drawable/sponsor"
        android:cropToPadding="false"
        android:foreground="?attr/selectableItemBackground"
        android:maxWidth="120dp"
        android:maxHeight="120dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


</androidx.constraintlayout.widget.ConstraintLayout>